# GPT-recap

./: .gitignore  README.md  pyproject.toml
docs/: CNAME  app.js  index.html  styles.css
gpt_recap/: __init__.py  analysis.py  cli.py  data.py  plots.py  story.py
